# tp-deploiement

./: .flake8  Dockerfile  Makefile  README.md  pyproject.toml
landscapred/: cli.py
