[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = "Classify landscape pictures."
license = "Apache-2.0"
name = "landscapred"
version = "0.1.0"

[tool.poetry.dependencies]
Flask = "^1.1.2"
opencv-python-headless = "^4.5.1"
python = "^3.6"
requests = "^2.25.1"
tensorflow = "^2.3"

[tool.poetry.scripts]
landscapred = 'landscapred.cli:main'

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"
flake8-bugbear = "^20.11.1"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
mypy = "^0.790"
pylint = "^2.6.0"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
